--- a/carts/cart.html
+++ b/carts/cart.html
@@ -1,10 +1,198 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Корзина</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f9f9f9;
+        }
+
+        .cart-container {
+            margin: 50px auto;
+            max-width: 1200px;
+        }
+
+        .cart-item {
+            border-bottom: 1px solid #ddd;
+            padding: 15px 0;
+        }
+
+        .cart-item img {
+            width: 80px;
+            height: auto;
+            background-color: #eaeaea;
+        }
+
+        .cart-summary {
+            margin-top: 20px;
+            font-size: 18px;
+        }
+
+        .checkout-form {
+            margin-top: 30px;
+        }
+
+        .btn-checkout {
+            background-color: black;
+            color: white;
+            padding: 10px 20px;
+            margin-top: 20px;
+        }
+
+        .footer-info {
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
 
+<!-- Хедер -->
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container d-flex justify-content-between align-items-center">
+            <a class="navbar-brand" href="#">
+                <img src="/static/images/logo-stub.png" alt="Logo" style="height: 40px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Link 1</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Link 2</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Link 3</a></li>
+                </ul>
+            </div>
+            <div class="ms-auto">
+                <a class="nav-link" href="#"><i class="bi bi-cart"></i> Cart</a>
+            </div>
+        </div>
+    </nav>
+</header>
+
+<!-- Контент корзины -->
+<div class="container cart-container">
+    <h2>Корзина</h2>
+
+    <!-- Товар 1 -->
+    <div class="row cart-item">
+        <div class="col-2">
+            <img src="/static/images/no-product-image.jpeg" alt="Товар">
+        </div>
+        <div class="col-6">
+            <h5>Название товара option 1</h5>
+            <p>Описание товара, размер, цвет и т.д.</p>
+        </div>
+        <div class="col-2">
+            <div class="d-flex align-items-center">
+                <button class="btn btn-sm btn-outline-secondary">-</button>
+                <input type="text" class="form-control text-center" value="1" style="width: 50px; margin: 0 10px;">
+                <button class="btn btn-sm btn-outline-secondary">+</button>
+            </div>
+        </div>
+        <div class="col-2 text-end">
+            <h5>99 999 ₽</h5>
+            <button class="btn btn-outline-danger btn-sm">Удалить</button>
+        </div>
+    </div>
+
+    <!-- Товар 2 -->
+    <div class="row cart-item">
+        <div class="col-2">
+            <img src="/static/images/no-product-image.jpeg" alt="Товар">
+        </div>
+        <div class="col-6">
+            <h5>Название товара option 2</h5>
+            <p>Описание товара, размер, цвет и т.д.</p>
+        </div>
+        <div class="col-2">
+            <div class="d-flex align-items-center">
+                <button class="btn btn-sm btn-outline-secondary">-</button>
+                <input type="text" class="form-control text-center" value="2" style="width: 50px; margin: 0 10px;">
+                <button class="btn btn-sm btn-outline-secondary">+</button>
+            </div>
+        </div>
+        <div class="col-2 text-end">
+            <h5>9 999 ₽</h5>
+            <button class="btn btn-outline-danger btn-sm">Удалить</button>
+        </div>
+    </div>
+
+    <!-- Итоговая стоимость -->
+    <div class="row cart-summary">
+        <div class="col-6">
+            <h5>Общая стоимость покупок: 99 999 ₽</h5>
+            <p>Стоимость доставки: 999 ₽</p>
+            <h5>Итог к оплате: 99 999 ₽</h5>
+        </div>
+    </div>
+
+    <!-- Форма для оформления заказа -->
+    <div class="checkout-form">
+        <h4>Оформление заказа</h4>
+        <form>
+            <div class="mb-3">
+                <label for="field1" class="form-label">Поле 1:</label>
+                <input type="text" class="form-control" id="field1">
+            </div>
+            <div class="mb-3">
+                <label for="field2" class="form-label">Поле 2:</label>
+                <input type="text" class="form-control" id="field2">
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3">
+                <label for="phone" class="form-label">Телефон:</label>
+                <input type="tel" class="form-control" id="phone">
+            </div>
+            <div class="form-check mb-3">
+                <input type="checkbox" class="form-check-input" id="privacyPolicy">
+                <label class="form-check-label" for="privacyPolicy">Я принимаю политику конфиденциальности</label>
+            </div>
+            <button type="submit" class="btn btn-checkout">Оформить покупку</button>
+        </form>
+    </div>
+</div>
+
+<!-- Футер -->
+<footer class="bg-light text-center text-lg-start">
+    <div class="container p-4">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Связь с нами</h5>
+                <ul class="list-unstyled mb-0">
+                    <li><a href="#" class="text-dark">Instagram</a></li>
+                    <li><a href="#" class="text-dark">Facebook</a></li>
+                    <li><a href="#" class="text-dark">+7 123 456 78 90</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Ссылки 1</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-dark">Link 1</a></li>
+                    <li><a href="#" class="text-dark">Link 2</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Ссылки 2</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-dark">Link 3</a></li>
+                    <li><a href="#" class="text-dark">Link 4</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Логотип</h5>
+                <img src="static/images/logo-stub.png" alt="Logo" style="height: 40px;">
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
