--- a/goods/catalog.html
+++ b/goods/catalog.html
@@ -71,7 +71,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">
-                <img src="logo-stub.png" alt="Logo" style="height: 40px;">
+                <img src="/static/images/logo-stub.png" alt="Logo" style="height: 40px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -162,7 +162,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Логотип</h5>
-                <img src="static/images/logo-stub.png" alt="Logo" style="height: 40px;">
+                <img src="C:\Users\PC\IdeaProjects\site\static\images\logo-stub.png" alt="Logo" style="height: 40px;">
             </div>
         </div>
     </div>
