--- a/goods/catalog.html
+++ b/goods/catalog.html
@@ -138,14 +138,22 @@
 <footer class="bg-light text-center text-lg-start">
     <div class="container p-4">
         <div class="row">
+            <!-- Контактная информация -->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Связь с нами</h5>
                 <ul class="list-unstyled mb-0">
-                    <li><a href="#" class="text-dark">Instagram</a></li>
-                    <li><a href="#" class="text-dark">Facebook</a></li>
-                    <li><a href="#" class="text-dark">+7 123 456 78 90</a></li>
+                    <li class="d-flex align-items-center mb-2">
+                        <img src="/static/images/whatsapp.png" style="height: 20px;" class="me-2">
+                        <a href="tel:+71234567890" class="text-dark">+7 123 456 78 90</a>
+                    </li>
+                    <li class="d-flex align-items-center">
+                        <img src="/static/images/email.png" style="height: 20px;" class="me-2">
+                        <a href="mailto:info@example.com" class="text-dark">info@example.com</a>
+                    </li>
                 </ul>
             </div>
+
+            <!-- Ссылки 1 -->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Ссылки 1</h5>
                 <ul class="list-unstyled">
@@ -153,6 +161,8 @@
                     <li><a href="#" class="text-dark">Link 2</a></li>
                 </ul>
             </div>
+
+            <!-- Ссылки 2 -->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                 <h5 class="text-uppercase">Ссылки 2</h5>
                 <ul class="list-unstyled">
@@ -160,9 +170,10 @@
                     <li><a href="#" class="text-dark">Link 4</a></li>
                 </ul>
             </div>
+
+            <!-- Логотип -->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <h5 class="text-uppercase">Логотип</h5>
-                <img src="C:\Users\PC\IdeaProjects\site\static\images\logo-stub.png" alt="Logo" style="height: 40px;">
+                <img src="/static/images/logo-stub.png" style="height: 40px;">
             </div>
         </div>
     </div>
